leptos_macro/tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.stderr
error[E0277]: component cannot be created — some required props are missing
  --> tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.rs:41:19
   |
41 |     let result = <_ as Finish>::finish(builder);
   |                   ^ unsatisfied trait bound
   |
help: the trait `Finish` is not implemented for `Builder<((), (String,))>`
  --> tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.rs:15:1
   |
15 | struct Builder<S>(S);
   | ^^^^^^^^^^^^^^^^^
   = note: see the errors above for details on which props are missing
help: the trait `Finish` is implemented for `Builder<((__F0,), (__F1,))>`
  --> tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.rs:29:1
   |
29 | impl<__F0, __F1> Finish for Builder<((__F0,), (__F1,))> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: component cannot be created — some required props are missing
  --> tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.rs:41:18
   |
41 |     let result = <_ as Finish>::finish(builder);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Finish` is not implemented for `Builder<((), (String,))>`
  --> tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.rs:15:1
   |
15 | struct Builder<S>(S);
   | ^^^^^^^^^^^^^^^^^
   = note: see the errors above for details on which props are missing
help: the trait `Finish` is implemented for `Builder<((__F0,), (__F1,))>`
  --> tests/compiler_assumptions/04_ufcs_concrete_pattern_matching.rs:29:1
   |
29 | impl<__F0, __F1> Finish for Builder<((__F0,), (__F1,))> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
